# wasm

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml  script.sh  slurm.sh  version-info.txt
result/: parallel_write_parquet_[10M,native,cpu_util].out  parallel_write_parquet_[10M,native].out  parallel_write_parquet_[10M,native]_2.out  parallel_write_parquet_[10M,wasix,cpu_util].out  parallel_write_parquet_[10M.wasix].out  parallel_write_parquet_[10M.wasix]_2.out  parallel_write_parquet_[30M,native].out  slurm-493884[perf,native].out
result/perf_record/: perf-native-1.data  perf-native-10.data  perf-native-11.data  perf-native-12.data  perf-native-13.data  perf-native-14.data  perf-native-15.data  perf-native-16.data  perf-native-17.data  perf-native-18.data  perf-native-19.data  perf-native-2.data  perf-native-20.data  perf-native-21.data  perf-native-22.data  perf-native-23.data  perf-native-24.data  perf-native-25.data  perf-native-26.data  perf-native-27.data  perf-native-28.data  perf-native-29.data  perf-native-3.data  perf-native-30.data  perf-native-31.data  perf-native-32.data  perf-native-33.data  perf-native-34.data  perf-native-35.data  perf-native-36.data  perf-native-37.data  perf-native-38.data  perf-native-4.data  perf-native-40.data  perf-native-5.data  perf-native-6.data  perf-native-7.data  perf-native-8.data  perf-native-9.data  slurm-493911.out  (+1 more)
result/perf_stat/: combined.xlsx  perf-IPC[exported,native].out  perf-IPC[exported,wasix].out  slurm-493885[perf,wasix].out
script/: example.sh  parallel_parquet.sh  parallel_read.sh  script.sh  slurm.sh  wasm_multithread.sh
src/: example.rs  lib.rs  parquet.rs
src/example/: mod.rs
src/parallel_read/: generic_parallel_read.rs  mod.rs  parallel_write_parquet.rs
src/parquet/: mod.rs
tmp/: example-[wasm32-unknown-unknown,debug].wat  example-[wasm32-wasi,release].wat  parallel_write_parquet_[release].wasm  parquet2-compilation-error-[wasi].txt  runtime-error-[parallel_write_parquet.wasm]
