cargo-features = ["profile-rustflags"]

[package]
name = "wasm_assessment"
version = "0.1.0"
edition = "2021"

[features]
wasm_multithread = ["parquet2"]
example = []

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-wasmer-wasi"

# [package.metadata]
# wasm-opt = true

[[bin]]
name = "example"
required-features = ["example"]

[[bin]]
name = "read_parquet_parallel"
required-features = ["wasm_multithread"]

[dependencies]
chrono = "0.4.31"
parquet2 = { version = "0.17.2", optional = true }
rayon = "1.8.0"
