cargo-features = ["profile-rustflags"]

[package]
name = "wasm_assessment"
version = "0.1.0"
edition = "2021"

[features]
wasm_multithread = ["parquet2"]
example = []
parallel_read = ["arrow2", "parquet2"]

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-wasmer-wasi"

# [package.metadata]
# wasm-opt = true

[[bin]]
name = "example"
required-features = ["example"]

[[bin]]
name = "read_parquet_parallel"
required-features = ["wasm_multithread"]

[[bin]]
name = "parallel_read"
required-features = ["parallel_read"]

[[bin]]
name = "generic_parallel_read"
required-features = ["parallel_read"]

[[bin]]
name = "parallel_write_parquet"
required-features = ["parallel_read"]

[dependencies]
arrow2 = { version = "0.18.0", optional = true, default-features = false, features = [
    "io_parquet",
    "io_parquet_compression",
] }
chrono = "0.4.31"
log = "0.4.20"
parquet2 = { version = "0.17.2", optional = true }
rayon = "1.8.0"
